# eframe-wgpu-hello-world

./: .gitignore  Cargo.toml  README.md  build.rs
src/: compile_shaders.bat  custom3d_glow_shader.frag  custom3d_glow_shader.vert  custom3d_naga_shader.frag  custom3d_naga_shader.vert  main.rs  main_glow.rs  main_wgpu.rs
src/compiled/: custom3d_naga_shader_frag.wgsl  custom3d_naga_shader_vert.wgsl
src/shaders/: custom3d_shader.frag  custom3d_shader.vert
src/shaders/glow_compatible/: custom3d_shader.vert
