[package]
name = "eframe_wgpu_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
bytemuck = "1.13.1"
eframe = {version = "0.21.3", features = ["wgpu"]}
egui-wgpu = "0.21.0"
egui_glow = "0.21.0"
glow = "0.12.1"
wgpu = {version = "0.15.1"}

[build-dependencies]
log = "0.4.17"
env_logger = "0.10.0"
naga = {version = "0.11.0", features = ["wgsl-out", "spv-in", "validate"]}
shaderc = "0.8.2"

# debug build optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
